Add dash between verb in the imperative and following pronoun

--- a/book-fr/avant-propos.html
+++ b/book-fr/avant-propos.html
@@ -620,7 +620,7 @@
         <!--
         put it down at any time.
         -->
-        posez le à n'importe quel moment.
+        posez-le à n'importe quel moment.
         <!--
         Leave the road.
         -->
