Translate 'original' as 'premier' rather than 'initial'
This has deeper meaning, as in 'Arts Premiers'.
Not just first, or early, but 'original'.

--- a/book-fr/avant-propos.html
+++ b/book-fr/avant-propos.html
@@ -672,7 +672,7 @@
         <!--
         I’m honored to say that since that original mail,
         -->
-        Je suis fière de dire que depuis cet email initial,
+        Je suis fière de dire que depuis ce premier email,
         <!--
         there have been many Frank mails in my inbox.
         -->
