--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -389,7 +389,7 @@
         <!--the parties involved in its making,-->
         les groupes qui interviennent dans sa construction,
         <!--those groups’ relationships to one another,-->
-        les relations qui lient ces groupent les uns aux autres,
+        les relations qui lient ces groupes les uns aux autres,
         <!--and the expected outcomes of the designer’s efforts.-->
         et les résultats attendus des efforts du créateurs.
         <!--Design has a tendency to live-->
