Fix grammar: remove mark of plural in singular

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -391,7 +391,7 @@
         <!--those groups’ relationships to one another,-->
         les relations qui lient ces groupes les uns aux autres,
         <!--and the expected outcomes of the designer’s efforts.-->
-        et les résultats attendus des efforts du créateurs.
+        et les résultats attendus des efforts du créateur.
         <!--Design has a tendency to live-->
         La création a tendance à s'incruster
         <!--between things to connect them,-->
