Translate one more paragraph in introduction

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -420,20 +420,37 @@
 
       <p>
         <!--The last part of the book-->
+        La dernière partie de ce livre
         <!--focuses on the primacy of the audience in design.-->
+        se focalise sur le rôle premier de l'audience dans la création.
         <!--It assesses methods to create-->
+        Elle évalue des méthodes pour créer
         <!--more meaningful connections with them-->
+        des liens plus riches avec cette audience
         <!--to unlock the great opportunity of this fortuitous arrangement.-->
-        <!--What can be done if we speak truly and honestly-->
-        <!--to the audience of our work?-->
+        et révéler l'opportunité formidable de cette entente fortuite.
+        <!--What can be done if we speak-->
+        Que peux-t-on accomplir si l'on parle
+        <!--truly and honestly to the audience of our work?-->
+        à l'audience de notre travail de manière vraie et honnête ?
         <!--Perhaps this changes the success metrics of design-->
+        Peut-être que cela change les critères de succès de la création
         <!--to more soft, meaningful qualities,-->
+        pour des qualités plus souples, plus riches de sens,
         <!--like enthusiasm, engagement, and resonance.-->
+        comme l'enthousiasme, l'implication et la résonance.
         <!--Reframing the practice as something more-->
+        Reformuler notre pratique comme quelque chose de plus
         <!--than commerce and problem-solving-->
+        que le commerce et la résolution de problèmes
         <!--lets us focus on fundamental issues about utility.-->
-        <!--It requires us to raise simple, difficult questions about our work,-->
-        <!--such as, “Does this help us to live well?”-->
+        nous permet de contempler la question fondamentale de son utilité.
+        <!--It requires us to raise simple, difficult questions-->
+        Cela requiert que nous posions des questions simples mais difficiles
+        <!--about our work, such as,-->
+        à propos de notre travail, telles que&nbsp;:
+        <!--“Does this help us to live well?”-->
+        «&nbsp;Cela nous aide-t-il à vivre mieux&nbsp;?»
       </p>
 
       <p>
