Add non-breaking space before colon in French

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -322,8 +322,10 @@
         L'invention devient notre optique pour imaginer ce qui est possible,
         <!--and design is the road we follow to reach it.-->
         et la création la route que nous suivons pour l'atteindre.
-        <!--But, there is a snag in McLuhan’s view,-->
-        Mais il y a quelque chose qui cloche dans le point de vue de McLuhan :
+        <!--But, there is a snag-->
+        Mais il y a quelque chose qui cloche
+        <!--in McLuhan’s view,-->
+        dans le point de vue de McLuhan&nbsp;:
         <!--because marching is no way to go into the future.-->
         on n'arrivera jamais au futur en marchant au pas.
         <!--It is too methodical and restricted.-->
