Stick closer to the original: 'live well' -> 'vivre bien'

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -452,7 +452,7 @@
         <!--about our work, such as,-->
         à propos de notre travail, telles que&nbsp;:
         <!--“Does this help us to live well?”-->
-        «&nbsp;Cela nous aide-t-il à vivre mieux&nbsp;?»
+        «&nbsp;Cela nous aide-t-il à vivre bien&nbsp;?»
       </p>
 
       <p>
