Translate one more paragraph of introduction

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -457,19 +457,33 @@
 
       <p>
         <!--<em>The Shape of Design</em> is a map-->
+        <em>La forme en création</em> est une carte
         <!--of the road where we dance-->
+        de la route où nous dansons
         <!--rather than a blueprint of it.-->
+        plutôt que son plan de construction.
         <!--It strives to investigate-->
+        C'est une lutte pour découvrir
         <!--the opportunities of exploring the terrain,-->
+        les occasions d'explorer le terrain,
         <!--and it values stepping back-->
+        qui met en valeur la prise de recul
         <!--from the everyday concerns of designing.-->
+        en retrait des préoccupations quotidiennes de la création.
         <!--It attempts to impose a meaningful distance-->
+        Une tentative d'imposer une distance pertinente
         <!--in order to find patterns in the work-->
+        pour identifier des motifs dans notre travail
         <!--and assess the practice as a whole.-->
+        et évaluer la pratique dans son ensemble.
         <!--One can observe, from this distance,-->
+        On peut observer, depuis cette distance,
         <!--two very fundamental things about design-->
+        deux choses vraiment fondamentales sur la création
         <!--that are easy to miss-->
+        que l'on peut aisément négliger
         <!--in the midst of all of this movement.-->
+        au milieu de tout ce mouvement.
       </p>
 
       <p>
