Simply translate 'easy to miss' as 'faciles à rater'

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -481,7 +481,7 @@
         <!--two very fundamental things about design-->
         deux choses vraiment fondamentales sur la création
         <!--that are easy to miss-->
-        que l'on peut aisément négliger
+        qui sont faciles à rater
         <!--in the midst of all of this movement.-->
         au milieu de tout ce mouvement.
       </p>
