Translate one more paragraph of introduction

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -488,17 +488,29 @@
 
       <p>
         <!--First, design is imagining a future-->
+        Premièrement, créer c'est imaginer un futur
         <!--and working toward it with intelligence and cleverness.-->
+        et travailler à le réaliser avec intelligence et ingéniosité.
         <!--We use design to close the gap-->
+        Nous utilisons la création pour réduire l'écart
         <!--between the situation we have-->
+        entre notre situation actuelle
         <!--and the one we desire.-->
+        et celle que nous désirons.
         <!--Second, design is a practice-->
+        Deuxièmement, la création est une pratique
         <!--built upon making things for other people.-->
+        basée sur la fabrication de choses pour d'autres gens.
         <!--We are all on the road together.-->
+        Nous sommes tous ensemble sur la route.
         <!--These two things dictate our relationship to the world-->
+        Ces deux choses dictent notre relation au monde
         <!--and our bond to one another.-->
+        et le lien qui nous unit les uns aux autres.
         <!--They form the foundations of the design practice,-->
+        Ils forment les fondations de notre pratique de la création,
         <!--so our work should revolve around these truths.-->
+        et notre travail devrait donc s'articuler autour de ces vérités.
       </p>
 
       <p>
