Complete translation of Introduction

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -514,20 +514,34 @@
       </p>
 
       <p>
-        <!--The practice, simply,-->
-        <!--is a way of thinking and moving-->
+        <!--The practice, simply, is-->
+        La pratique est simplement
+        <!--a way of thinking and moving-->
+        une manière de penser et de bouger
         <!--that we use to enhance life.-->
+        que nous utilisons pour améliorer notre vie.
         <!--It is available to anyone.-->
+        Elle peut être utilisée par n'importe qui.
         <!--We listen to our song,-->
+        Nous écoutons notre chanson,
         <!--watch how things move,-->
+        nous regardons comment les choses bougent,
         <!--imagine the arrangement,-->
+        nous imaginons l'arrangement,
         <!--then act.-->
+        puis nous agissons.
         <!--We dance together backwards into the future,-->
+        Nous dansons ensemble à reculons vers le futur,
         <!--giving influence and taking it,-->
+        donnant et recevant de l'influence,
         <!--forming and being formed.-->
+        formant et prenant forme.
         <!--This is dance of eternity,-->
+        C'est la danse éternelle
         <!--and the shape of design.-->
+        et la forme de la création.
         <!--I hope to see you singing on the road.-->
+        J'espère vous voir chanter sur la route.
       </p>
 
       <!--a href="partI.html" class="continue"
