Fix typo: 'dancer' -> 'danser'

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -344,7 +344,7 @@
 
       <p>
         <!--Dancing requires music,-->
-        Il faut de la musique pour dancer,
+        Il faut de la musique pour danser,
         <!--and we each have our own song.-->
         et nous avons tous une chanson différente.
         <!--These songs are the culmination of our individual dispositions.-->
