Soften translation: 'incruster' -> 'installer', 'connecter' -> 'relier'

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -395,9 +395,9 @@
         <!--and the expected outcomes of the designer’s efforts.-->
         et les résultats attendus des efforts du créateur.
         <!--Design has a tendency to live-->
-        La création a tendance à s'incruster
+        La création a tendance à s'installer
         <!--between things to connect them,-->
-        entre les choses pour les connecter,
+        entre les choses pour les relier,
         <!--so this is analyzed in more detail to find patterns.-->
         selon des motifs trouvés par une analyse plus détaillée.
         <!--It looks to weigh the value of fiction,-->
