--- a/book-fr/acknowledgements.html
+++ b/book-fr/acknowledgements.html
@@ -2,43 +2,119 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-    <title>La forme en création, de Frank Chimero</title>
-    <meta name="description" content="Traduction française de Eric Bréchemier"/>
-    <link rel="stylesheet" media="screen, projection" href="book.css" />
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
+    />
+    <title>The Shape of Design by Frank Chimero</title>
+    <link rel="stylesheet" media="screen, projection" href="Styles/book.css" />
   </head>
 
   <body>
     <header>
-      <h1>La forme en création, de <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
-      <a href="http://www.shapeofdesignbook.com/download.html">Téléchargement du livre numérique</a></h1>
+      <h1>
+        <a class="discreet" href="index.html">The Shape of Design</a>
+        by <a class="discreet" href="http://frankchimero.com">Frank Chimero</a>
+      </h1>
+      <a href="http://www.shapeofdesignbook.com/download.html"
+        class="download">Download eBook</a>
     </header>
 
-    <nav>
+    <nav class="contents">
       <ol>
-        <li><a href="index.html" class="tooltip">◦<span>Avant‑propos</span></a></li>
-        <li class="sep"><a href="introduction.html" class="tooltip">◦<span>Introduction</span></a></li>
+        <li>
+          <a href="foreword.html"
+            >◦<span class="tooltip"
+            >Foreword</span
+          ></a>
+        </li>
+        <li class="sep">
+          <a href="introduction.html"
+            >◦<span class="tooltip"
+            >Introduction</span
+          ></a>
+        </li>
 
-        <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span></a></li>
-        <li><a href="chapter02.html" class="tooltip">◦<span>2&nbsp;&middot;&nbsp;Craft&nbsp;and&nbsp;Beauty</span></a></li>
-        <li><a href="chapter03.html" class="tooltip">◦<span>3&nbsp;&middot;&nbsp;Limitations&nbsp;and&nbsp;Improvisation</span></a></li>
-        <li class="sep"><a href="chapter04.html" class="tooltip">◦<span>4&nbsp;&middot;&nbsp;Form&nbsp;and&nbsp;Magic</span></a></li>
+        <li>
+          <a href="chapter01.html"
+            >◦<span class="tooltip"
+            >1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span
+          ></a>
+        </li>
+        <li>
+          <a href="chapter02.html"
+            >◦<span class="tooltip"
+            >2&nbsp;&middot;&nbsp;Craft&nbsp;and&nbsp;Beauty</span
+          ></a>
+        </li>
+        <li>
+          <a href="chapter03.html"
+            >◦<span class="tooltip"
+            >3&nbsp;&middot;&nbsp;Improvisation&nbsp;and&nbsp;Limitations</span
+          ></a>
+        </li>
+        <li class="sep">
+          <a href="chapter04.html"
+            >◦<span class="tooltip"
+            >4&nbsp;&middot;&nbsp;Form&nbsp;and&nbsp;Magic</span
+          ></a>
+        </li>
 
-        <li><a href="chapter05.html" class="tooltip">◦<span>5&nbsp;&middot;&nbsp;Fiction&nbsp;and&nbsp;Bridges</span></a></li>
-        <li class="sep"><a href="chapter06.html" class="tooltip">◦<span>6&nbsp;&middot;&nbsp;Context&nbsp;and&nbsp;Response</span></a></li>
+        <li>
+          <a href="chapter05.html"
+            >◦<span class="tooltip"
+            >5&nbsp;&middot;&nbsp;Fiction&nbsp;and&nbsp;Bridges</span
+          ></a>
+        </li>
+        <li class="sep">
+          <a href="chapter06.html"
+            >◦<span class="tooltip"
+            >6&nbsp;&middot;&nbsp;Context&nbsp;and&nbsp;Response</span
+          ></a>
+        </li>
 
-        <li><a href="chapter07.html" class="tooltip">◦<span>7&nbsp;&middot;&nbsp;Stories&nbsp;and&nbsp;Voids</span></a></li>
-        <li><a href="chapter08.html" class="tooltip">◦<span>8&nbsp;&middot;&nbsp;Frameworks&nbsp;and&nbsp;Etiquette</span></a></li>
-        <li><a href="chapter09.html" class="tooltip">◦<span>9&nbsp;&middot;&nbsp;Delight&nbsp;and&nbsp;Accommodation</span></a></li>
-        <li class="sep"><a href="chapter10.html" class="tooltip">◦<span>10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span></a></li>
+        <li>
+          <a href="chapter07.html"
+            >◦<span class="tooltip"
+            >7&nbsp;&middot;&nbsp;Stories&nbsp;and&nbsp;Voids</span
+          ></a>
+        </li>
+        <li>
+          <a href="chapter08.html"
+            >◦<span class="tooltip"
+            >8&nbsp;&middot;&nbsp;Frameworks&nbsp;and&nbsp;Etiquette</span
+          ></a>
+        </li>
+        <li>
+          <a href="chapter09.html"
+            >◦<span class="tooltip"
+            >9&nbsp;&middot;&nbsp;Delight&nbsp;and&nbsp;Accommodation</span
+          ></a>
+        </li>
+        <li class="sep">
+          <a href="chapter10.html"
+            >◦<span class="tooltip"
+            >10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span
+          ></a>
+        </li>
 
-        <li><a href="endnotes.html" class="tooltip">◦<span>Notes&nbsp;de&nbsp;fin</span></a></li>
-        <li><a href="acknowledgements.html" class="active tooltip">•<span>Remerciements</span></a></li>
+        <li>
+          <a href="endnotes.html"
+            >◦<span class="tooltip"
+            >Endnotes</span
+          ></a>
+        </li>
+        <li>
+          <a href="acknowledgements.html" class="active"
+            >•<span class="tooltip"
+            >Acknowledgements</span
+          ></a>
+        </li>
       </ol>
     </nav>
 
     <article class="ack">
-      <h1>Remerciements</h1>
+      <!--h2>Acknowledgements</h2-->
+      <h2>Remerciements</h2>
       <p class="first">
         <!--
         I began thinking seriously about this book
@@ -224,8 +300,12 @@
     </article>
 
     <footer>
-      Partagé sous licence <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.fr">Creative Commons BY-NC-SA,</a><br>
-      grâce à la générosité des <a href="http://shapeofdesignbook.com/kickstarter/">mécènes du projet sur Kickstarter.</a>
+      Licensed
+      <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"
+        >BY-NC-SA Creative Commons.</a><br />
+      Thanks to
+      <a href="http://shapeofdesignbook.com/kickstarter/"
+        >the Kickstarter backers.</a>
     </footer>
   </body>
 </html>
