Add links from table of contents to part I, part II, part III

--- a/book-fr/table-des-matieres.html
+++ b/book-fr/table-des-matieres.html
@@ -224,7 +224,7 @@
           <h3>Part I: The Song</h3>
         </li-->
         <li>
-          <h3>Partie I : la chanson</h3>
+          <h3><a href="partieI.html">Partie I : la chanson</a></h3>
         </li>
         <!--li>
           <a href="chapter01.html">How and Why</a>
@@ -255,7 +255,7 @@
           <h3>Part II: In-between Spaces</h3>
         </li-->
         <li>
-          <h3>Partie II : entre-deux</h3>
+          <h3><a href="partieII.html">Partie II : entre-deux</a></h3>
         </li>
         <!--li>
           <a href="chapter05.html">Fiction and Bridges</a>
@@ -274,7 +274,7 @@
           <h3>Part III: The Opening</h3>
         </li-->
         <li>
-          <h3>Partie III : l'ouverture</h3>
+          <h3><a href="partieIII.html">Partie III : l'ouverture</a></h3>
         </li>
         <!--li>
           <a href="chapter07.html">Stories and Voids</a>
