--- a/book-en/contents.html
+++ b/book-en/contents.html
@@ -123,7 +123,7 @@
         </li>
 
         <li>
-          <h3>Part I: The Song</h3>
+          <h3><a href="partI.html">Part I: The Song</a></h3>
         </li>
         <li>
           <a href="chapter01.html">How and Why</a>
@@ -139,7 +139,7 @@
         </li>
 
         <li>
-          <h3>Part II: In-between Spaces</h3>
+          <h3><a href="partII.html">Part II: In-between Spaces</a></h3>
         </li>
         <li>
           <a href="chapter05.html">Fiction and Bridges</a>
@@ -149,7 +149,7 @@
         </li>
 
         <li>
-          <h3>Part III: The Opening</h3>
+          <h3><a href="partIII.html">Part III: The Opening</a></h3>
         </li>
         <li>
           <a href="chapter07.html">Stories and Voids</a>
