Translate headings and links to following page

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -547,7 +547,7 @@
       <!--a href="partI.html" class="continue"
         >Continue to Part One: The Song</a-->
       <a href="partieI.html" class="continue"
-        >Suite de la lecture dans la partie I : la chanson</a>
+        >Suite de la lecture dans la partie I&nbsp;: la chanson</a>
     </article>
 
     <!--footer>
