--- a/book-fr/notes.html
+++ b/book-fr/notes.html
@@ -205,8 +205,10 @@
     </nav>
 
     <article class="endnotes">
-      <h2>Endnotes</h2>
+      <!--h2>Endnotes</h2-->
+      <h2>Notes de fin</h2>
 
+      <!--h3>Introduction</h3-->
       <h3>Introduction</h3>
 
       <p>
@@ -221,7 +223,8 @@
         <span class="osf">1967</span>.
       </p>
 
-      <h3>Chapter One</h3>
+      <!--h3>Chapter One</h3-->
+      <h3>Chapitre un</h3>
 
       <p>
         <a id="chapter01-note01" class="endnote-anchor"
@@ -272,7 +275,8 @@
         <span class="osf">02</span> Apr. <span class="osf">2012</span>.
       </p>
 
-      <h3>Chapter Two</h3>
+      <!--h3>Chapter Two</h3-->
+      <h3>Chapitre deux</h3>
 
       <p>
         <a id="chapter02-note01" class="endnote-anchor"
@@ -299,7 +303,8 @@
         <span class="osf">1990</span>.
       </p>
 
-      <h3>Chapter Three</h3>
+      <!--h3>Chapter Three</h3-->
+      <h3>Chapitre trois</h3>
 
       <p>
         <a id="chapter03-note01" class="endnote-anchor"
@@ -330,7 +335,8 @@
         <span class="osf">1994</span>.
       </p>
 
-      <h3>Chapter Four</h3>
+      <!--h3>Chapter Four</h3-->
+      <h3>Chapitre quatre</h3>
 
       <p>
         <a id="chapter04-note01" class="endnote-anchor"
@@ -373,7 +379,8 @@
         <span class="osf">2010</span>.
       </p>
 
-      <h3>Chapter Five</h3>
+      <!--h3>Chapter Five</h3-->
+      <h3>Chapitre cinq</h3>
 
       <p>
         <a id="chapter05-note01" class="endnote-anchor"
@@ -387,7 +394,8 @@
         <span class="osf">1981</span>.
       </p>
 
-      <h3>Chapter Six</h3>
+      <!--h3>Chapter Six</h3-->
+      <h3>Chapitre six</h3>
 
       <p>
         <a id="chapter06-note01" class="endnote-anchor"
@@ -416,7 +424,8 @@
         <span class="osf">1982</span>.
       </p>
 
-      <h3>Chapter Seven</h3>
+      <!--h3>Chapter Seven</h3-->
+      <h3>Chapitre sept</h3>
 
       <p>
         <a id="chapter07-note01" class="endnote-anchor"
@@ -430,7 +439,8 @@
         <span class="osf">1945</span>.
       </p>
 
-      <h3>Chapter Eight</h3>
+      <!--h3>Chapter Eight</h3-->
+      <h3>Chapitre huit</h3>
 
       <p>
         <a id="chapter08-note01" class="endnote-anchor"
@@ -445,7 +455,8 @@
         <span class="osf">2000</span>.
       </p>
 
-      <h3>Chapter Nine</h3>
+      <!--h3>Chapter Nine</h3-->
+      <h3>Chapitre neuf</h3>
 
       <p>
         <a id="chapter09-note01" class="endnote-anchor"
@@ -462,7 +473,8 @@
         Web.
       </p>
 
-      <h3>Chapter Ten</h3>
+      <!--h3>Chapter Ten</h3-->
+      <h3>Chapitre dix</h3>
 
       <p>
         <a id="chapter10-note01" class="endnote-anchor"
@@ -607,8 +619,10 @@
         <span class="osf">1962</span>.
       </p>
 
-      <a href="acknowledgements.html" class="continue"
-        >Continue to Acknowledgements</a>
+      <!--a href="acknowledgements.html" class="continue"
+        >Continue to Acknowledgements</a-->
+      <a href="remerciements.html" class="continue"
+        >Suite de la lecture avec les remerciements</a>
     </article>
 
     <!--footer>
