Do not use 'Suite de la lecture' after the end of main copy
Past the end of reading, I altered the expression in the link
to the next page to:

  - 'Consulter' (consult/refer to) for end notes
  - 'Voir' (view/see) for acknowledgments

--- a/book-fr/notes.html
+++ b/book-fr/notes.html
@@ -1078,7 +1078,7 @@
       <!--a href="acknowledgements.html" class="continue"
         >Continue to Acknowledgements</a-->
       <a href="remerciements.html" class="continue"
-        >Suite de la lecture avec les remerciements</a>
+        >Voir les remerciements</a>
     </article>
 
     <!--footer>
