Add French text of quote from Pascal
Modern French version taken from the Édition électronique
des Pensées de Blaise Pascal, by Dominique Descotes and
Gilles Proust.

http://www.penseesdepascal.fr/

This text differs from the English translation by one word,
'sphere' in English vs 'milieu' in French. The latter is found
in Pascal's manuscript. This somewhat changes the meaning:
we are sailing on a vast environment; the idea of the Earth
sphere floating in space is not present in the original.

--- a/book-fr/notes.html
+++ b/book-fr/notes.html
@@ -606,20 +606,17 @@
       <p>
         <a id="chapitre06-note01" class="endnote-anchor"
           href="chapitre06.html#chapitre06-note01"
-          ><em>«&nbsp;<del>We sail within a vast sphere</del>…&nbsp;»</em
+          ><em>«&nbsp;Nous voguons sur un milieu vaste…&nbsp;»</em
         ></a><br/>
-        <span style="background-color: yellow;"
-          >TODO: find original French extract on Projet Gutenberg</span><br/>
-        Blaise Pascal.
-        <a href="http://www.gutenberg.org/files/18269/18269-h/18269-h.htm#p_72"
-          ><em>Pensées.</em
-        ></a><br/>
-        <span style="background-color: yellow;"
-          >TODO: add date of original publication in French</span><br/>
-        Projet Gutenberg.
-        <span class="osf">27</span> avril <span class="osf">2006</span>.<br/>
+        Blaise Pascal
+        (<span class="osf">1623</span>&ndash;<span class="osf">1662</span>).
+        <a href="http://www.penseesdepascal.fr/Transition/Transition4-moderne.php"
+          ><em>Pensées</em
+        ></a>. Posthume.<br/>
+        Édition électronique des Pensées de Blaise Pascal.
+        Juin <span class="osf">2011</span>.<br/>
         Web.
-        <span class="osf">8</span> avril <span class="osf">2012</span>.
+        <span class="osf">17</span> septembre <span class="osf">2016</span>.
       </p>
 
       <!--p>
