Add date of interview with Charles Eames (1972)
This is the earliest copyright date indicated at the start
of the video.

--- a/book-fr/notes.html
+++ b/book-fr/notes.html
@@ -741,11 +741,11 @@
         ></a>
         (1:46&ndash;1:54).<br/>
         Interview.
-        Charles Eames. <span style="background-color:yellow;"
-        >TODO: add date of interview</span><br/>
+        Charles Eames.
+        <span class="osf">1972</span>.<br/>
         YouTube.
         Web.
-        <span class="osf">2012</span>
+        <span class="osf">2012</span>.
       </p>
 
       <!--h3>Chapter Ten</h3-->
