Add missing periods at end of lines in notes

--- a/book-fr/notes.html
+++ b/book-fr/notes.html
@@ -361,7 +361,7 @@
           It’s a small discipline,
           but you can put an awful lot into&nbsp;it.”</em
         ></a><br/>
-        John Flanders. <em>The Craftsman’s Way</em><br/>
+        John Flanders. <em>The Craftsman’s Way</em>.<br/>
         Canadian Expressions.
         Toronto&nbsp;:
         université de Toronto,
@@ -822,10 +822,10 @@
         ></a><br/>
         Elizabeth Gilbert.
         Conférence <span class="osf">TED</span>.
-        <span class="osf">2009</span><br/>
+        <span class="osf">2009</span>.<br/>
         YouTube.
         Web.
-        <span class="osf">2012</span>
+        <span class="osf">2012</span>.
       </p>
 
       <!--p>
