Translate Craft (uppercase) as Savoir-faire
I previously made the change only for the lowercase (craft).

--- a/book-fr/partieI.html
+++ b/book-fr/partieI.html
@@ -75,7 +75,7 @@
         <li>
           <a href="chapitre02.html"
             >◦<span class="tooltip"
-            >2&nbsp;&middot;&nbsp;Technique&nbsp;et&nbsp;beauté</span
+            >2&nbsp;&middot;&nbsp;Savoir-faire&nbsp;et&nbsp;beauté</span
           ></a>
         </li>
         <!--li>
@@ -224,7 +224,7 @@
           <a href="chapter02.html">Craft and Beauty</a>
         </li-->
         <li>
-          <a href="chapitre02.html">Technique et beauté</a>
+          <a href="chapitre02.html">Savoir-faire et beauté</a>
         </li>
         <!--li>
           <a href="chapter03.html">Improvisation and Limitations</a>
