Update links to use https for all websites that support it
That is most of them. Only http://tech.mit.edu/V116/N59/paulrand.59n.html
failed to load on https.

--- a/book-en/contents.html
+++ b/book-en/contents.html
@@ -13,7 +13,7 @@
     <header>
       <h1>
         <a class="discreet" href="index.html">The Shape of Design</a>
-        by <a class="discreet" href="http://frankchimero.com">Frank Chimero</a>
+        by <a class="discreet" href="https://frankchimero.com">Frank Chimero</a>
       </h1>
       <a href="https://shapeofdesignbook.com/download/"
         class="download">Download eBook</a>
@@ -179,10 +179,10 @@
 
     <footer>
       Licensed
-      <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"
+      <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/"
         >BY-NC-SA Creative Commons.</a><br />
       Thanks to
-      <a href="http://shapeofdesignbook.com/kickstarter/"
+      <a href="https://shapeofdesignbook.com/kickstarter/"
         >the Kickstarter backers.</a>
     </footer>
   </body>
