--- a/book-fr/table-des-matieres.html
+++ b/book-fr/table-des-matieres.html
@@ -15,11 +15,11 @@
     <header>
       <!--h1>
         <a class="discreet" href="index.html">The Shape of Design</a>
-        by <a class="discreet" href="http://frankchimero.com">Frank Chimero</a>
+        by <a class="discreet" href="https://frankchimero.com">Frank Chimero</a>
       </h1-->
       <h1>
         <a class="discreet" href="index.html">La forme en création</a>,
-        de <a class="discreet" href="http://frankchimero.com">Frank Chimero</a>
+        de <a class="discreet" href="https://frankchimero.com">Frank Chimero</a>
       </h1>
       <!--a href="https://shapeofdesignbook.com/download/"
         class="download">Download eBook</a-->
@@ -324,18 +324,18 @@
 
     <!--footer>
       Licensed
-      <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"
+      <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/"
         >BY-NC-SA Creative Commons.</a><br />
       Thanks to
-      <a href="http://shapeofdesignbook.com/kickstarter/"
+      <a href="https://shapeofdesignbook.com/kickstarter/"
         >the Kickstarter backers.</a>
     </footer-->
     <footer>
       Partagé sous licence
-      <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.fr"
+      <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.fr"
         >Creative Commons BY-NC-SA,</a><br/>
       grâce à la générosité des
-      <a href="http://shapeofdesignbook.com/kickstarter/"
+      <a href="https://shapeofdesignbook.com/kickstarter/"
         >mécènes du projet sur Kickstarter.</a>
     </footer>
   </body>
