Prevent line break on hyphen of compound word 'Savoir-faire'
I replaced the hyphen with a non-breaking hyphen to avoid a
line break in the middle of the word in sidebar labels.

--- a/book-fr/table-des-matieres.html
+++ b/book-fr/table-des-matieres.html
@@ -75,7 +75,7 @@
         <li>
           <a href="chapitre02.html"
             >◦<span class="tooltip"
-            >2&nbsp;&middot;&nbsp;Savoir-faire&nbsp;et&nbsp;beauté</span
+            >2&nbsp;&middot;&nbsp;Savoir‑faire&nbsp;et&nbsp;beauté</span
           ></a>
         </li>
         <!--li>
@@ -236,7 +236,7 @@
           <a href="chapter02.html">Craft and Beauty</a>
         </li-->
         <li>
-          <a href="chapitre02.html">Savoir-faire et beauté</a>
+          <a href="chapitre02.html">Savoir‑faire et beauté</a>
         </li>
         <!--li>
           <a href="chapter03.html">Improvisation and Limitations</a>
