Translate 'The Song' as "Le chant" not "La chanson"
I also created a glossary entry with the rationale: the word "chant"
applies to both birds and humans, not "chanson" (a song with lyrics).
Because of the reference to the song of birds in chapter one, the
word "chant" shall be preferred for the title of part I.

--- a/book-fr/partieI.html
+++ b/book-fr/partieI.html
@@ -210,7 +210,7 @@
         <!--span>Part One</span><br/-->
         <span>Partie un</span><br/>
         <!--The Song-->
-        La chanson
+        Le chant
         <hr/>
       </h2>
       <ol class="balanced-list">
