--- a/book-fr/table-des-matieres.html
+++ b/book-fr/table-des-matieres.html
@@ -224,7 +224,7 @@
           <h3>Part I: The Song</h3>
         </li-->
         <li>
-          <h3><a href="partieI.html">Partie I : la chanson</a></h3>
+          <h3><a href="partieI.html">Partie I : le chant</a></h3>
         </li>
         <!--li>
           <a href="chapter01.html">How and Why</a>
